[gd_scene load_steps=14 format=3 uid="uid://cbktrwily2q1k"]

[ext_resource type="Script" path="res://scripts/scene3/Fase3.gd" id="1_0bqeq"]
[ext_resource type="Script" path="res://scripts/scene3/backgroundMovement.gd" id="2_ukt1l"]
[ext_resource type="Texture2D" uid="uid://uycaxdn5qib5" path="res://sprites/scene1/background.png" id="2_wix82"]
[ext_resource type="Texture2D" uid="uid://dakj0a3074s3i" path="res://sprites/icon.svg" id="4_ft0li"]
[ext_resource type="Script" path="res://scripts/scene3/test.gd" id="4_o5oq6"]
[ext_resource type="Script" path="res://scripts/scene3/Sensor.gd" id="6_dosai"]
[ext_resource type="Script" path="res://scripts/scene3/player.gd" id="7_r6v3p"]
[ext_resource type="Texture2D" uid="uid://bmgkcxfh66q5c" path="res://sprites/cursorClick.png" id="8_gu6q2"]
[ext_resource type="FontFile" uid="uid://csgqd3brms0ua" path="res://fonts/Super Disco Personal Use.ttf" id="14_g21pj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7foli"]
size = Vector2(20, 330)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p07s6"]
size = Vector2(38, 56)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vvsjq"]
radius = 6.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llx75"]
size = Vector2(56, 14)

[node name="Fase3" type="Node2D"]
script = ExtResource("1_0bqeq")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 70)
shape = SubResource("RectangleShape2D_7foli")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-293, 70)
shape = SubResource("RectangleShape2D_7foli")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(293, 70)
shape = SubResource("RectangleShape2D_7foli")

[node name="RoadL1" type="Node2D" parent="." groups=["road"]]
script = ExtResource("2_ukt1l")

[node name="Background" type="Sprite2D" parent="RoadL1"]
modulate = Color(0.0392157, 0.0392157, 0.0392157, 1)
position = Vector2(-146, 27)
scale = Vector2(0.146509, 0.236561)
texture = ExtResource("2_wix82")

[node name="Area2D" type="Area2D" parent="RoadL1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoadL1/Area2D"]
position = Vector2(-11, 0)
polygon = PackedVector2Array(-230, 234, -230, 185, -230, 155, -228, 116, -228, 65, -228, 20, -217, -23, -193, -51, -152, -71, -132, -82, -124, -121, -124, -155, -125, -174, -297, -175, -292, 231)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RoadL1/Area2D"]
position = Vector2(-21, -169)
polygon = PackedVector2Array(41, 7, 41, 400, -103, 403, -105, 320, -105, 284, -95, 229, -62, 179, -24, 153, -5, 117, -10, 58, -10, -6, 39, -9)

[node name="RoadL2" type="Node2D" parent="." groups=["road"]]
position = Vector2(0, -409)
script = ExtResource("2_ukt1l")

[node name="Background2" type="Sprite2D" parent="RoadL2"]
modulate = Color(0.0392157, 0.0392157, 0.0392157, 1)
position = Vector2(-146, 27)
scale = Vector2(0.145765, 0.236561)
texture = ExtResource("2_wix82")

[node name="Area2D" type="Area2D" parent="RoadL2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoadL2/Area2D"]
position = Vector2(-260, -11)
rotation = 3.14159
scale = Vector2(1, -1)
polygon = PackedVector2Array(-230, 243, -224, 157, -226, 114, -225, 64, -228, 20, -217, -23, -193, -51, -162, -61, -139, -84, -131, -121, -132, -150, -130, -169, -273, -174, -280, 241)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RoadL2/Area2D"]
position = Vector2(-304, -11)
rotation = 3.14159
scale = Vector2(1, -1)
polygon = PackedVector2Array(2, 1, 3, 78, 3, 137, 3, 222, 5, 238, -161, 240, -161, 133, -157, 99, -150, 57, -123, 35, -82, 25, -59, 1, -52, -48, -50, -114, -53, -155, -53, -169, 9, -171)

[node name="RoadR3" type="Node2D" parent="." groups=["road"]]
position = Vector2(294, 0)
script = ExtResource("2_ukt1l")

[node name="Background" type="Sprite2D" parent="RoadR3"]
modulate = Color(0.0392157, 0.0392157, 0.0392157, 1)
position = Vector2(-146, 27)
scale = Vector2(0.146509, 0.236561)
texture = ExtResource("2_wix82")

[node name="Area2D" type="Area2D" parent="RoadR3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoadR3/Area2D"]
position = Vector2(-11, 0)
polygon = PackedVector2Array(-230, 234, -230, 185, -230, 155, -228, 116, -228, 65, -228, 20, -217, -23, -193, -51, -152, -71, -132, -82, -124, -121, -124, -155, -125, -174, -297, -175, -292, 231)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RoadR3/Area2D"]
position = Vector2(-21, -169)
polygon = PackedVector2Array(41, 7, 41, 400, -103, 403, -105, 320, -105, 284, -95, 229, -62, 179, -24, 153, -5, 117, -10, 58, -10, -6, 39, -9)

[node name="RoadR4" type="Node2D" parent="." groups=["road"]]
position = Vector2(294, -409)
script = ExtResource("2_ukt1l")

[node name="Background2" type="Sprite2D" parent="RoadR4"]
modulate = Color(0.0392157, 0.0392157, 0.0392157, 1)
position = Vector2(-146, 27)
scale = Vector2(0.145765, 0.236561)
texture = ExtResource("2_wix82")

[node name="Area2D" type="Area2D" parent="RoadR4"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoadR4/Area2D"]
position = Vector2(-260, -11)
rotation = 3.14159
scale = Vector2(1, -1)
polygon = PackedVector2Array(-230, 243, -224, 157, -226, 114, -225, 64, -228, 20, -217, -23, -193, -51, -162, -61, -139, -84, -131, -121, -132, -150, -130, -169, -273, -174, -280, 241)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RoadR4/Area2D"]
position = Vector2(-304, -11)
rotation = 3.14159
scale = Vector2(1, -1)
polygon = PackedVector2Array(2, 1, 3, 78, 3, 137, 3, 222, 5, 238, -161, 240, -161, 133, -157, 99, -150, 57, -123, 35, -82, 25, -59, 1, -52, -48, -50, -114, -53, -155, -53, -169, 9, -171)

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(-179, 90)
scale = Vector2(0.5, 0.5)
script = ExtResource("4_o5oq6")
backForce = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(0, -30)
shape = SubResource("RectangleShape2D_p07s6")

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
position = Vector2(0, -30)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("4_ft0li")

[node name="LeftSensor" type="Area2D" parent="Enemy" groups=["left"]]
position = Vector2(-70, -110)
script = ExtResource("6_dosai")

[node name="Sprite2D" type="Sprite2D" parent="Enemy/LeftSensor"]
scale = Vector2(0.28125, 0.28125)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/LeftSensor"]
shape = SubResource("CapsuleShape2D_vvsjq")

[node name="RightSensor" type="Area2D" parent="Enemy" groups=["right"]]
position = Vector2(70, -110)
script = ExtResource("6_dosai")

[node name="Sprite2D" type="Sprite2D" parent="Enemy/RightSensor"]
scale = Vector2(0.28125, 0.28125)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/RightSensor"]
shape = SubResource("CapsuleShape2D_vvsjq")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(114, 90)
scale = Vector2(0.5, 0.5)
script = ExtResource("7_r6v3p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -30)
shape = SubResource("RectangleShape2D_p07s6")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(0, -30)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("4_ft0li")

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(0, -51)
shape = SubResource("RectangleShape2D_llx75")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 70)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="HUD" type="Control" parent="Camera2D"]
layout_mode = 3
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -92.0
offset_right = 287.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/HUD"]
modulate = Color(0, 0, 0, 1)
position = Vector2(288, 162)
scale = Vector2(0.359375, 2.4375)
texture = ExtResource("4_ft0li")

[node name="VSlider" type="VSlider" parent="Camera2D/HUD"]
texture_filter = 1
layout_mode = 0
offset_left = 270.0
offset_top = 19.0
offset_right = 286.0
offset_bottom = 304.0
theme_override_icons/grabber_disabled = ExtResource("8_gu6q2")
max_value = 2000.0
step = 0.1
editable = false
scrollable = false
metadata/_edit_use_anchors_ = true

[node name="VSlider2" type="VSlider" parent="Camera2D/HUD"]
layout_mode = 0
offset_left = 291.0
offset_top = 19.0
offset_right = 307.0
offset_bottom = 304.0
max_value = 2000.0
step = 0.1
editable = false
scrollable = false

[node name="Pause" type="Control" parent="Camera2D"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -290.0
offset_top = -92.0
offset_right = 288.0
offset_bottom = 232.0

[node name="ColorRect" type="ColorRect" parent="Camera2D/Pause"]
layout_mode = 0
offset_left = -19.0
offset_top = -7.0
offset_right = 594.0
offset_bottom = 333.0
color = Color(0.0235294, 0, 0.0392157, 0.345098)

[node name="ColorRect2" type="ColorRect" parent="Camera2D/Pause"]
layout_mode = 0
offset_left = 124.0
offset_top = 33.0
offset_right = 458.0
offset_bottom = 286.0
color = Color(1, 1, 1, 0.219608)

[node name="PauseLabel" type="Label" parent="Camera2D/Pause"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 108.0
offset_right = 6925.0
offset_bottom = 726.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "Jogo pausado!"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Camera2D/Pause"]
layout_mode = 0
offset_left = 151.0
offset_top = 208.0
offset_right = 259.0
offset_bottom = 268.0
icon_alignment = 1
expand_icon = true

[node name="MenuLabel" type="Label" parent="Camera2D/Pause/Resume"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 15.0
offset_right = 2515.0
offset_bottom = 633.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 400
text = "Continuar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Button" parent="Camera2D/Pause"]
layout_mode = 0
offset_left = 326.0
offset_top = 208.0
offset_right = 434.0
offset_bottom = 268.0
icon_alignment = 1
expand_icon = true

[node name="MenuLabel" type="Label" parent="Camera2D/Pause/Menu"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 13.0
offset_right = 1735.0
offset_bottom = 697.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "Sair"
horizontal_alignment = 1

[node name="Final" type="Control" parent="Camera2D"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -290.0
offset_top = -92.0
offset_right = 288.0
offset_bottom = 232.0

[node name="ColorRect" type="ColorRect" parent="Camera2D/Final"]
layout_mode = 0
offset_left = -19.0
offset_top = -7.0
offset_right = 594.0
offset_bottom = 333.0
color = Color(0.0235294, 0, 0.0392157, 0.345098)

[node name="ColorRect2" type="ColorRect" parent="Camera2D/Final"]
layout_mode = 0
offset_left = 124.0
offset_top = 33.0
offset_right = 458.0
offset_bottom = 286.0
color = Color(1, 1, 1, 0.219608)

[node name="FinishLabel" type="Label" parent="Camera2D/Final"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 77.0
offset_right = 6923.0
offset_bottom = 761.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "PARABÉNS!"
horizontal_alignment = 1

[node name="PontosLabel" type="Label" parent="Camera2D/Final"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 121.0
offset_right = 6923.0
offset_bottom = 1541.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "AS FRUTAS FORAM
ENTREGUES AO DESTINO"
horizontal_alignment = 1

[node name="PlayAgain" type="Button" parent="Camera2D/Final"]
layout_mode = 0
offset_left = 151.0
offset_top = 208.0
offset_right = 259.0
offset_bottom = 268.0
icon_alignment = 1
expand_icon = true

[node name="AgainLabel" type="Label" parent="Camera2D/Final/PlayAgain"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 11.0
offset_right = 1737.0
offset_bottom = 851.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 315
text = "Jogar
novamente"
horizontal_alignment = 1

[node name="Menu" type="Button" parent="Camera2D/Final"]
layout_mode = 0
offset_left = 326.0
offset_top = 208.0
offset_right = 434.0
offset_bottom = 268.0
icon_alignment = 1
expand_icon = true

[node name="MenuLabel" type="Label" parent="Camera2D/Final/Menu"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 14.0
offset_right = 1735.0
offset_bottom = 698.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "Sair"
horizontal_alignment = 1

[node name="FinalContinue" type="Control" parent="Camera2D"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -290.0
offset_top = -92.0
offset_right = 288.0
offset_bottom = 232.0

[node name="ColorRect" type="ColorRect" parent="Camera2D/FinalContinue"]
layout_mode = 0
offset_left = -19.0
offset_top = -7.0
offset_right = 594.0
offset_bottom = 333.0
color = Color(0.0235294, 0, 0.0392157, 0.345098)

[node name="ColorRect2" type="ColorRect" parent="Camera2D/FinalContinue"]
layout_mode = 0
offset_left = 124.0
offset_top = 33.0
offset_right = 458.0
offset_bottom = 286.0
color = Color(1, 1, 1, 0.219608)

[node name="FinishLabel" type="Label" parent="Camera2D/FinalContinue"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 77.0
offset_right = 6923.0
offset_bottom = 761.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "PARABÉNS!"
horizontal_alignment = 1

[node name="PontosLabel" type="Label" parent="Camera2D/FinalContinue"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 121.0
offset_right = 6923.0
offset_bottom = 1541.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "AS FRUTAS FORAM
ENTREGUES AO DESTINO"
horizontal_alignment = 1

[node name="ContinueStoryButton" type="Button" parent="Camera2D/FinalContinue"]
layout_mode = 0
offset_left = 151.0
offset_top = 208.0
offset_right = 259.0
offset_bottom = 268.0
icon_alignment = 1
expand_icon = true

[node name="AgainLabel" type="Label" parent="Camera2D/FinalContinue/ContinueStoryButton"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 11.0
offset_right = 1737.0
offset_bottom = 851.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 315
text = "Continuar história"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Menu" type="Button" parent="Camera2D/FinalContinue"]
layout_mode = 0
offset_left = 326.0
offset_top = 208.0
offset_right = 434.0
offset_bottom = 268.0
icon_alignment = 1
expand_icon = true

[node name="MenuLabel" type="Label" parent="Camera2D/FinalContinue/Menu"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 14.0
offset_right = 1735.0
offset_bottom = 698.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "Sair"
horizontal_alignment = 1

[node name="loadingScreen" type="Sprite2D" parent="."]
position = Vector2(-7, 82)
texture = ExtResource("2_wix82")

[node name="PauseLabel" type="Label" parent="loadingScreen"]
layout_direction = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1152.0
offset_top = -83.0
offset_right = 5268.0
offset_bottom = 7157.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.0392157, 0.0901961, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/font = ExtResource("14_g21pj")
theme_override_font_sizes/font_size = 545
text = "USE AS SETAS DO TECLADO
PARA MOVIMENTAR O
CAMINHÃO DA DIREITA!"
horizontal_alignment = 1

[connection signal="area_entered" from="Enemy/LeftSensor" to="Enemy/LeftSensor" method="_on_area_entered"]
[connection signal="area_exited" from="Enemy/LeftSensor" to="Enemy/LeftSensor" method="_on_area_exited"]
[connection signal="area_entered" from="Enemy/RightSensor" to="Enemy/RightSensor" method="_on_area_entered"]
[connection signal="area_exited" from="Enemy/RightSensor" to="Enemy/RightSensor" method="_on_area_exited"]
[connection signal="area_entered" from="Player/Area2D" to="Player" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Player/Area2D" to="Player" method="_on_area_2d_area_exited"]
[connection signal="pressed" from="Camera2D/Pause/Resume" to="." method="_on_resume_pressed"]
[connection signal="button_up" from="Camera2D/Pause/Menu" to="." method="_on_menu_button_up"]
[connection signal="button_up" from="Camera2D/Final/PlayAgain" to="." method="_on_play_again_button_up"]
[connection signal="button_up" from="Camera2D/Final/Menu" to="." method="_on_menu_button_up"]
[connection signal="button_up" from="Camera2D/FinalContinue/ContinueStoryButton" to="." method="_on_continue_story_button_button_up"]
[connection signal="button_up" from="Camera2D/FinalContinue/Menu" to="." method="_on_menu_button_up"]
